Bug 2026574 - Fix long strings overflowing search field in about:opentabs splitview r=desktop-theme-reviewers,tabbrowser-reviewers,kcochrane,tgiles
Differential Revision: https://phabricator.services.mozilla.com/D290346

UltraBlame original commit: 732d0f55ad1dc436fca1fbc6b46d1f2a28daff56

--- a/toolkit/content/widgets/moz-card/moz-card.css
+++ b/toolkit/content/widgets/moz-card/moz-card.css
@@ -46,6 +46,7 @@
   flex-direction: column;
   align-items: flex-start;
   gap: var(--card-article-gap);
+  overflow-wrap: anywhere;
 }
 
 #moz-card-details {
